--- a/app/src/main/res/layout/activity_client_overview.xml
+++ b/app/src/main/res/layout/activity_client_overview.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -69,7 +68,7 @@
         android:background="@drawable/clients_screen_clients_card_background"
         android:layout_below="@+id/client_overview_activity_overview_RelativeLayout"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
         android:elevation="2dp">
 
         <LinearLayout
@@ -82,14 +81,26 @@
 
             <TextView
                 android:id="@+id/client_overview_activity_clients_list_header_TextView"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
+                android:layout_weight="1"
                 android:textColor="@color/kwik_me_white"
                 android:textSize="20sp"
-                android:text="Client's Traps: (16)"
+                android:text="Client's Traps:"
                 android:drawablePadding="5dp"
                 android:drawableStart="@drawable/traps"
                 android:gravity="center_vertical|start" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="@color/kwik_me_white"
+                android:textSize="24sp"
+                android:text="..."
+                android:textStyle="bold"
+                android:paddingEnd="20dp"
+                android:gravity="center_vertical|end"/>
 
         </LinearLayout>
 
@@ -105,18 +116,40 @@
 
         </ListView>
     </RelativeLayout>
+
+    <!-- Add new trap -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/client_overview_activity_traps_RelativeLayout"
         android:gravity="center_horizontal">
-        <ImageButton
-            android:id="@+id/fab"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:scaleType="fitCenter"
-            android:layout_gravity="bottom|center"
-            android:background="@android:color/transparent"
-            android:src="@drawable/add_trap" />
+
+        <LinearLayout
+            android:id="@+id/client_overview_activity_add_new_trap_LinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom|center_vertical"
+            android:layout_marginBottom="15dp">
+
+            <ImageButton
+                android:id="@+id/fab"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:scaleType="fitEnd"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/add_trap"
+                android:background="@android:color/transparent"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="#FF256BA7"
+                android:textSize="20sp"
+                android:text="Add new trap"/>
+        </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
