--- a/app/src/main/res/layout/activity_good_job.xml
+++ b/app/src/main/res/layout/activity_good_job.xml
@@ -6,67 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.kwik.square.GoodJobActivity"
-    android:orientation="vertical"
     android:background="@color/kwik_me_gray_back_ground">
 
-
-    <RelativeLayout
-        android:id="@+id/content_layout"
-        android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
-        >
-
-        <ImageView
-            android:id="@+id/good_job_ImageView"
-            android:layout_width="250dp"
-            android:layout_centerHorizontal="true"
-            android:layout_height="250dp"
-            android:src="@drawable/ipm_good_job_logo"/>
-        <TextView
-            android:id="@+id/good_job_TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/kwik_me_blue_text_color"
-            android:text="@string/good_job_activity_good_job"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_below="@+id/good_job_ImageView"/>
-
-        <TextView
-            android:id="@+id/good_job_the_button_connected_textView"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:textColor="@color/kwik_me_blue_text_color"
-            android:textSize="20sp"
-            android:text="@string/good_job_activity_the_button_is_successfully_connected"
-            android:layout_below="@id/good_job_TextView"/>
-
-        <TextView
-            android:id="@+id/good_job_serial_number_label_textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textColor="@color/kwik_me_blue_text_color"
-            android:layout_below="@+id/good_job_the_button_connected_textView"
-            android:text="@string/good_job_activity_button_serial_number"/>
-        <TextView
-            android:id="@+id/good_job_serial_number_TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text=""
-            android:textSize="20sp"
-            android:textColor="@color/kwik_me_gray_comments"
-            android:layout_below="@+id/good_job_serial_number_label_textView"/>
-
-    </RelativeLayout>
 
     <Button
         android:id="@+id/good_job_activity_start_button"
@@ -75,11 +17,91 @@
         android:background="@drawable/start_button_selector"
         android:text="@string/good_job_activity_finish_button"
         android:textSize="24sp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:onClick="orderSetUpClick"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/good_job_activity_need_help_LinearLayout"
         android:layout_centerHorizontal="true" />
+
+    <RelativeLayout
+        android:id="@+id/content_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="34dp">
+
+        <TextView
+            android:id="@+id/good_job_TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/kwik_me_blue_text_color"
+            android:text="@string/good_job_activity_good_job"
+            android:textSize="28sp"
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/good_job_serial_number_label_LinearLayout"/>
+
+        <TextView
+            android:id="@+id/good_job_the_button_connected_textView"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:textColor="@color/manatee"
+            android:textSize="20sp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/good_job_activity_the_button_is_successfully_connected"
+            android:layout_below="@id/good_job_TextView"/>
+        <LinearLayout
+            android:id="@+id/good_job_serial_number_label_LinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/video_player_view">
+            <TextView
+                android:id="@+id/good_job_serial_number_TextView"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Serial number: 1090000"
+                android:textSize="20sp"
+                android:textColor="@color/outerspace"
+                android:layout_below="@+id/video_player_view"/>
+        </LinearLayout>
+
+
+
+        <VideoView
+            android:id="@+id/video_player_view"
+            android:layout_width="@dimen/good_job_video"
+            android:layout_height="@dimen/good_job_video"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/good_job_activity_need_help_LinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|bottom"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+       >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/need_help_"
+            android:textColor="#B1B4B9"
+            android:textSize="18sp"
+            android:padding="5dp"
+            />
+    </LinearLayout>
 
 </RelativeLayout>
