--- a/app/src/main/res/layout/activity_trap_details.xml
+++ b/app/src/main/res/layout/activity_trap_details.xml
@@ -103,7 +103,7 @@
                         android:id="@+id/trap_details_activity_name_TextView"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:text="ttttttt" />
+                        android:text="" />
 
                     <EditText
                         android:id="@+id/trap_details_activity_name_EditText"
