--- a/app/src/main/res/layout/app_bar_my_kwik_buttons.xml
+++ b/app/src/main/res/layout/app_bar_my_kwik_buttons.xml
@@ -31,16 +31,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="bottom|center_vertical">
+        android:onClick="addNewTrapClick"
+        android:layout_gravity="bottom|center_vertical"
+        android:layout_marginBottom="15dp">
 
         <ImageButton
             android:id="@+id/fab"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:scaleType="fitEnd"
             android:layout_marginEnd="10dp"
-
             android:src="@drawable/add_trap"
             android:background="@android:color/transparent"/>
 
