--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,48 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <color name="colorPrimary">#ff2a6ea9</color>
-    <color name="colorPrimaryDark">#fd256296</color>
-    <color name="colorAccent">#FF4081</color>
-
-
-    <color name="kwik_me_screen_background_color">#F4F6F7</color>
-    <color name="kwik_me_button_background_color">#00cee2</color>
-    <color name="kwik_me_button_text_color">#ffffff</color>
-    <color name="kwik_me_facebook_color">#6387dc</color>
-    <color name="kwik_me_text_white">#ffffff</color>
-    <color name="kwik_me_gray_comments">#a1a1a1</color>
-    <color name="kwik_me_black">#313131</color>
-    <color name="kwik_me_link_message">#00c2d5</color>
-    <color name="kwik_me_white">#ffffff</color>
-    <color name="kwik_me_orange">#F47320</color>
-    <color name="kwik_me_facebook">#0169A6</color>
-    <color name="kwik_me_text_color_when_background_white">#0169a6</color>
-    <color name="kwik_me_dark_blue">#2a6ea9</color>
-
-    <color name="kwik_me_smart_network_fragment_frame_shadow_first_layer">#01686868</color>
-    <color name="kwik_me_smart_network_fragment_frame_shadow_second_layer">#05686868</color>
-    <color name="kwik_me_smart_network_fragment_frame_shadow_third_layer">#10686868</color>
-    <color name="kwik_me_smart_network_fragment_frame_shadow_fourth_layer">#20686868</color>
-    <color name="kwik_me_smart_network_fragment_frame_shadow_fifth_layer">#30686868</color>
-    <color name="kwik_me_smart_network_Gray_Disabled">#CCCCCC</color>
-    <color name="kwik_me_smart_network_intro_green">#6B9D34</color>
-    <color name="kwik_me_smart_network_green_button_pressed">#429411</color>
-    <color name="kwik_me_start_screen_status_bar_back_ground_color">#e8e8e8</color>
-    <color name="kwik_me_button_back_ground">#2a6ea9</color>
-    <color name="kwik_me_blue_text_color">#2a6ea9</color>
-    <color name="kwik_me_error_dialog_back_ground">#256ba7</color>
-    <color name="kwik_me_blue_back_ground">#256ba7</color>
-    <color name="kwik_me_gray_back_ground">#eeeeee</color>
-    <color name="kwik_me_menu_item_text_color">#6d6d6d</color>
-    <color name="kwik_me_menu_item_text_color_50_alpha">#f2f2f2</color>
-    <color name="kwik_me_menu_group_item_text_color">#6d6d6d6d</color>
-    <color name="kwik_me_error_message_black_text">#4A4A4A</color>
-    <color name="kwik_me_button_non_clickable_background">#C8C8C8</color>
-    <color name="manatee_1">#929292</color>
-    <color name="manatee_2">#8c9496</color>
-    <color name="mayablue">#58b2ff</color>
-    <color name="camouflagegreen">#609f5e</color>
-    <color name="color_609f5e">#256BA7</color>
-
-
+  <color name="colorPrimary">#ff2a6ea9</color>
+  <color name="colorPrimaryDark">#fd256296</color>
+  <color name="colorAccent">#FF4081</color>
+  <color name="kwik_me_screen_background_color">#F4F6F7</color>
+  <color name="kwik_me_button_background_color">#00cee2</color>
+  <color name="kwik_me_button_text_color">#ffffff</color>
+  <color name="kwik_me_facebook_color">#6387dc</color>
+  <color name="kwik_me_text_white">#ffffff</color>
+  <color name="kwik_me_gray_comments">#a1a1a1</color>
+  <color name="kwik_me_black">#313131</color>
+  <color name="kwik_me_link_message">#00c2d5</color>
+  <color name="kwik_me_white">#ffffff</color>
+  <color name="kwik_me_orange">#F47320</color>
+  <color name="kwik_me_facebook">#0169A6</color>
+  <color name="kwik_me_text_color_when_background_white">#0169a6</color>
+  <color name="kwik_me_dark_blue">#2a6ea9</color>
+  <color name="kwik_me_smart_network_fragment_frame_shadow_first_layer">#01686868</color>
+  <color name="kwik_me_smart_network_fragment_frame_shadow_second_layer">#05686868</color>
+  <color name="kwik_me_smart_network_fragment_frame_shadow_third_layer">#10686868</color>
+  <color name="kwik_me_smart_network_fragment_frame_shadow_fourth_layer">#20686868</color>
+  <color name="kwik_me_smart_network_fragment_frame_shadow_fifth_layer">#30686868</color>
+  <color name="kwik_me_smart_network_Gray_Disabled">#CCCCCC</color>
+  <color name="kwik_me_smart_network_intro_green">#6B9D34</color>
+  <color name="kwik_me_smart_network_green_button_pressed">#429411</color>
+  <color name="kwik_me_start_screen_status_bar_back_ground_color">#e8e8e8</color>
+  <color name="kwik_me_button_back_ground">#2a6ea9</color>
+  <color name="kwik_me_blue_text_color">#2a6ea9</color>
+  <color name="kwik_me_error_dialog_back_ground">#256ba7</color>
+  <color name="kwik_me_blue_back_ground">#256ba7</color>
+  <color name="kwik_me_gray_back_ground">#eeeeee</color>
+  <color name="kwik_me_menu_item_text_color">#6d6d6d</color>
+  <color name="kwik_me_menu_item_text_color_50_alpha">#f2f2f2</color>
+  <color name="kwik_me_menu_group_item_text_color">#6d6d6d6d</color>
+  <color name="kwik_me_error_message_black_text">#4A4A4A</color>
+  <color name="kwik_me_button_non_clickable_background">#C8C8C8</color>
+  <color name="manatee_1">#929292</color>
+  <color name="manatee_2">#8c9496</color>
+  <color name="mayablue">#58b2ff</color>
+  <color name="camouflagegreen">#609f5e</color>
+  <color name="color_609f5e">#256BA7</color>
+  <color name="black">#000000</color>
+  <color name="manatee">#9b9b9b</color>
+  <color name="deepcarminepink">#f62c44</color>
+  <color name="lavendergray">#c4d0d5</color>
+  <color name="outerspace">#4a4a4a</color>
+  <color name="silver">#b5bbc5</color>
+  <color name="pumpkin">#f27321</color>
+  <color name="lapislazuli">#256ba7</color>
+  <color name="ashgrey">#b1b4b9</color>
 </resources>
+
