--- a/app/src/main/res/layout/activity_client_overview.xml
+++ b/app/src/main/res/layout/activity_client_overview.xml
@@ -92,6 +92,7 @@
                 android:gravity="center_vertical|start" />
 
             <TextView
+                android:id="@+id/client_overview_activity_client_details_three_dots_TextView"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
