--- a/app/src/main/res/layout/activity_add_new_trap.xml
+++ b/app/src/main/res/layout/activity_add_new_trap.xml
@@ -268,7 +268,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_below="@+id/required_comment_TextView"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/add_new_trap_activity_next_Button"
@@ -280,14 +281,6 @@
                 android:onClick="onNextClick"
                 android:text="@string/base_activity_next"
                 android:textSize="24sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"
-            android:paddingBottom="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
