--- a/app/src/main/res/layout/activity_client_overview.xml
+++ b/app/src/main/res/layout/activity_client_overview.xml
@@ -1,50 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/kwik_me_screen_background_color"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/kwik_me_screen_background_color"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="me.kwik.square.ClientOverviewActivity">
+    tools:context="me.kwik.square.ClientOverviewActivity"
+    android:gravity="center_horizontal">
 
     <RelativeLayout
         android:id="@+id/client_overview_activity_overview_RelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:background="@drawable/clients_screen_cards_backgrounds"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:layout_weight="2"
         android:elevation="2dp">
 
         <LinearLayout
             android:id="@+id/client_overview_activity_overview_header_LinearLayout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@drawable/rectangle_4_vd"
             android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp">
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="40dp"
-                android:textColor="@color/kwik_me_white"
-                android:textSize="20sp"
-                android:text="Client's Overview"
+                android:layout_weight="1.3"
                 android:drawablePadding="5dp"
                 android:drawableStart="@drawable/overview_icon"
-                android:gravity="center_vertical|start" />
+                android:gravity="center_vertical|start"
+                android:text="Client's Overview"
+                android:textColor="@color/kwik_me_white"
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:textColor="@color/kwik_me_white"
-                android:textSize="20sp"
+                android:gravity="center_vertical|end"
                 android:text="Total Traps: (7)"
-                android:gravity="center_vertical|end"/>
+                android:textColor="@color/kwik_me_white"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -52,11 +56,11 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/client_overview_activity_overview_header_LinearLayout"
+            android:background="@drawable/clients_listview_background"
             android:gravity="center"
             android:text="3 Trap Alerts"
-            android:textSize="22sp"
             android:textColor="#8C9496"
-            />
+            android:textSize="22sp" />
 
 
     </RelativeLayout>
@@ -64,93 +68,79 @@
     <RelativeLayout
         android:id="@+id/client_overview_activity_traps_RelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:background="@drawable/clients_screen_clients_card_background"
-        android:layout_below="@+id/client_overview_activity_overview_RelativeLayout"
-        android:layout_marginTop="15dp"
+        android:layout_height="0dp"
+        android:layout_weight="8"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:elevation="2dp">
 
         <LinearLayout
             android:id="@+id/client_overview_activity_clients_list_header_LinearLayout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@drawable/rectangle_4_vd"
             android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp">
 
             <TextView
                 android:id="@+id/client_overview_activity_clients_list_header_TextView"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:textColor="@color/kwik_me_white"
-                android:textSize="20sp"
-                android:text="Client's Traps:"
                 android:drawablePadding="5dp"
                 android:drawableStart="@drawable/traps"
-                android:gravity="center_vertical|start" />
+                android:gravity="center_vertical|start"
+                android:text="Client's Traps:"
+                android:textColor="@color/kwik_me_white"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/client_overview_activity_client_details_three_dots_TextView"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
+                android:gravity="center_vertical|end"
+                android:paddingEnd="20dp"
+                android:text="..."
                 android:textColor="@color/kwik_me_white"
                 android:textSize="24sp"
-                android:text="..."
-                android:textStyle="bold"
-                android:paddingEnd="20dp"
-                android:gravity="center_vertical|end"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <ListView
             android:id="@+id/client_overview_activity_traps_ListView"
-            android:layout_below="@+id/client_overview_activity_clients_list_header_LinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/client_overview_activity_clients_list_header_LinearLayout"
+            android:background="@drawable/clients_listview_background"
             android:divider="#E0E0E0"
-            android:fadeScrollbars="false"
             android:dividerHeight="0.75dp"
-            >
+            android:paddingBottom="10dp"
+            android:fadeScrollbars="false">
 
         </ListView>
     </RelativeLayout>
 
-    <!-- Add new trap -->
-    <RelativeLayout
+
+    <LinearLayout
+        android:id="@+id/client_overview_activity_add_new_trap_LinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/client_overview_activity_traps_RelativeLayout"
-        android:gravity="center_horizontal">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal|top"
+        android:paddingBottom="10dp">
 
-        <LinearLayout
-            android:id="@+id/client_overview_activity_add_new_trap_LinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="bottom|center_vertical"
-            android:layout_marginBottom="15dp">
 
-            <ImageButton
-                android:id="@+id/fab"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="40dp"
-                android:scaleType="fitEnd"
-                android:layout_marginEnd="10dp"
-                android:src="@drawable/add_trap"
-                android:background="@android:color/transparent"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textColor="#FF256BA7"
-                android:textSize="20sp"
-                android:text="Add new trap"/>
-        </LinearLayout>
-    </RelativeLayout>
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:drawablePadding="5sp"
+            android:drawableLeft="@drawable/add_trap"
+            android:text="Add new trap"
+            android:textColor="#FF256BA7"
+            android:textSize="20sp" />
+    </LinearLayout>
+</LinearLayout>
