--- a/app/src/main/res/layout/content_my_kwik_buttons.xml
+++ b/app/src/main/res/layout/content_my_kwik_buttons.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/kwik_me_screen_background_color"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="me.kwik.square.ClientsActivity"
-    tools:showIn="@layout/app_bar_my_kwik_buttons">
+    tools:showIn="@layout/app_bar_my_kwik_buttons"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/clients_activity_overview_RelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:background="@drawable/clients_screen_cards_backgrounds"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:layout_weight="2"
         android:elevation="2dp">
 
         <LinearLayout
@@ -25,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:orientation="horizontal"
+            android:background="@drawable/rectangle_4_vd"
             android:paddingStart="10dp"
             android:paddingEnd="10dp">
 
@@ -54,24 +56,21 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/clients_activity_overview_header_LinearLayout"
+            android:background="@drawable/clients_listview_background"
             android:gravity="center"
             android:text="3 Trap Alerts"
             android:textSize="22sp"
             android:textColor="#8C9496"
             />
-
-
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/clients_activity_clients_RelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/clients_screen_clients_card_background"
-        android:layout_below="@+id/clients_activity_overview_RelativeLayout"
-        android:layout_above="@+id/fab"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="60dp"
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:elevation="2dp">
 
         <LinearLayout
@@ -79,6 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:orientation="horizontal"
+            android:background="@drawable/rectangle_4_vd"
             android:paddingStart="10dp"
             android:paddingEnd="10dp">
 
@@ -99,9 +99,11 @@
             android:id="@+id/clients_activity_clients_ListView"
             android:layout_below="@+id/clients_activity_clients_list_header_LinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:background="@drawable/clients_listview_background"
+            android:layout_height="wrap_content"
             android:divider="#E0E0E0"
             android:fadeScrollbars="false"
+            android:paddingBottom="2dp"
             android:dividerHeight="0.75dp"
             >
 
@@ -111,25 +113,23 @@
     </RelativeLayout>
 
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:id="@+id/my_buttons_activity_progressBar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone"/>
-
-    <ListView
-        android:id="@+id/my_buttons_activity_buttons_list_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:scrollbars="none"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10.0dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="34dp"
-        android:layout_alignParentStart="true"
-        android:visibility="gone">
-    </ListView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="10dp"
+        android:onClick="addNewTrapClick"
+        android:gravity="center_horizontal|top"
+      >
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="#FF256BA7"
+            android:drawablePadding="5dp"
+            android:textSize="20sp"
+            android:drawableLeft="@drawable/add_trap"
+            android:text="Add new trap"/>
+    </LinearLayout>
+</LinearLayout>
