--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,5 +49,6 @@
   <color name="pumpkin">#f27321</color>
   <color name="lapislazuli">#256ba7</color>
   <color name="ashgrey">#b1b4b9</color>
+  <color name="munsell">#f2f2f2</color>
 </resources>
 
