--- a/app/src/main/res/layout/traps_list_item.xml
+++ b/app/src/main/res/layout/traps_list_item.xml
@@ -39,20 +39,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.8"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/trap_item_low_battery_ImageView"
-                android:layout_width="wrap_content"
+                android:layout_width="10dp"
+                android:scaleType="fitCenter"
                 android:layout_height="match_parent"
                 android:src="@drawable/battery_low"
                 android:layout_marginEnd="5dp"/>
             <ImageView
                 android:id="@+id/trap_item_image_ImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/kwik_orange"/>
+                android:layout_gravity="center_vertical"
+                android:layout_width="60dp"
+                android:layout_height="70dp"
+                android:src="@drawable/kwik_orange"
+                android:scaleType="fitCenter" />
 
         </LinearLayout>
         <LinearLayout
