--- a/app/src/main/res/layout/activity_trap_details.xml
+++ b/app/src/main/res/layout/activity_trap_details.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_weight="1"
+                android:layout_weight="2.5"
                 android:gravity="center_vertical|start"
                 android:text="Trap details"
                 android:textColor="@color/kwik_me_white"
@@ -78,6 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -116,17 +117,6 @@
                         android:paddingStart="2dp"
                         android:visibility="invisible" />
                 </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/trap_details_activity_finish_editing_TextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="end"
-                    android:onClick="finishEditingClick"
-                    android:text="Finish Editing"
-                    android:textColor="#FF256BA7"
-                    android:visibility="invisible" />
             </LinearLayout>
 
             <ImageButton
@@ -425,17 +415,6 @@
                         android:visibility="invisible" />
                 </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/trap_details_activity_description_finish_editing_TextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:paddingStart="10dp"
-                    android:gravity="end"
-                    android:onClick="finishEditingDescriptionClick"
-                    android:text="Finish Editing"
-                    android:textColor="#FF256BA7"
-                    android:visibility="invisible" />
             </LinearLayout>
         </LinearLayout>
 
