--- a/app/src/main/res/drawable/troubleshooting_upper_rounded_corners_bakground.xml
+++ b/app/src/main/res/drawable/troubleshooting_upper_rounded_corners_bakground.xml
@@ -7,9 +7,11 @@
 
 
     <padding android:left="5dp" android:top="5dp"
-             android:right="5dp" android:bottom="5dp" />
+        android:right="5dp" android:bottom="5dp" />
 
     <stroke android:width="0.0dp" android:color="#D9D9D9"/>
-    <corners android:radius="5dp" />
+    <corners android:topLeftRadius="5dp"
+        android:topRightRadius="5dp"/>
+
 
 </shape>
