--- a/app/src/main/res/layout/troubleshooting_list_item.xml
+++ b/app/src/main/res/layout/troubleshooting_list_item.xml
@@ -26,8 +26,8 @@
         <ImageButton
             android:id="@+id/troubleshooting_list_item_arrow_ImageButton"
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:background="@color/kwik_me_white"
+            android:layout_weight="0.8"
+            android:background="@android:color/transparent"
             android:layout_height="match_parent"
             android:src="@drawable/right_blue_arrow"/>
     </LinearLayout>
@@ -39,11 +39,13 @@
         android:orientation="vertical"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:visibility="gone">
+        android:visibility="gone"
+        >
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/ashgrey"/>
+            android:layout_height="0.25dp"
+            android:background="@color/ashgrey"
+            android:layout_marginBottom="20dp"/>
 
     </LinearLayout>
 
