--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,7 +43,7 @@
   <color name="black">#000000</color>
   <color name="manatee">#9b9b9b</color>
   <color name="deepcarminepink">#f62c44</color>
-  <color name="lavendergray">#c4d0d5</color>
+  <color name="lavendergray">#8c9496</color>
   <color name="outerspace">#4a4a4a</color>
   <color name="silver">#b5bbc5</color>
   <color name="pumpkin">#f27321</color>
