--- a/app/src/main/res/layout/activity_client_overview.xml
+++ b/app/src/main/res/layout/activity_client_overview.xml
@@ -35,7 +35,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1.3"
                 android:drawablePadding="5dp"
-                android:drawableStart="@drawable/overview_icon"
+                android:drawableStart="@drawable/clients"
                 android:gravity="center_vertical|start"
                 android:text="Client's Overview"
                 android:textColor="@color/kwik_me_white"
@@ -100,14 +100,15 @@
             <TextView
                 android:id="@+id/client_overview_activity_client_details_three_dots_TextView"
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center_vertical|end"
                 android:paddingEnd="20dp"
                 android:text="..."
                 android:textColor="@color/kwik_me_white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:typeface="normal"
+                android:gravity="end" />
 
         </LinearLayout>
 
@@ -143,6 +144,6 @@
             android:drawableLeft="@drawable/add_trap"
             android:text="Add new trap"
             android:textColor="#FF256BA7"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
     </LinearLayout>
 </LinearLayout>
