--- a/app/src/main/res/layout/activity_create_client.xml
+++ b/app/src/main/res/layout/activity_create_client.xml
@@ -4,7 +4,8 @@
     android:id="@+id/activity_ipm_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="@color/kwik_me_white">
 
     <RelativeLayout
         android:layout_width="match_parent"
