--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,15 +13,15 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="40dp">
 
 
             <ImageView
@@ -48,9 +48,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
+
             android:background="@color/kwik_me_white"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -67,18 +67,19 @@
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="10dp"
                />
 
             <EditText
                 android:id="@+id/signin_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/rectangle_2_vd"
                 android:drawableLeft="@drawable/password"
                 android:drawablePadding="10dp"
@@ -86,12 +87,14 @@
                 android:inputType="text"
                 android:maxLines="1"
                 android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
 
                 />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="50dp" />
+                android:layout_height="35dp" />
 
             <Button
                 android:id="@+id/sigin_sign_in_button"
@@ -99,6 +102,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rectangle_vd"
                 android:gravity="center"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="20sp"
                 android:text="Sign in"
                 android:textColor="@color/kwik_me_white" />
 
