--- a/app/src/main/res/layout/app_bar_my_kwik_buttons.xml
+++ b/app/src/main/res/layout/app_bar_my_kwik_buttons.xml
@@ -19,14 +19,35 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@android:color/transparent">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="5"
+                android:layout_height="wrap_content"
+                android:text="Clients"
+                android:gravity="center_horizontal"
+                android:textColor="@color/kwik_me_white"
+                android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="end"
+                android:layout_height="wrap_content"
+                android:src="@drawable/header_right_logo" />
+        </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
 
 
     </android.support.design.widget.AppBarLayout>
 
 
     <include layout="@layout/content_my_kwik_buttons"/>
-
 
 
 </android.support.design.widget.CoordinatorLayout>
