--- a/app/src/main/res/layout/content_my_kwik_buttons.xml
+++ b/app/src/main/res/layout/content_my_kwik_buttons.xml
@@ -71,7 +71,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:elevation="2dp">
 
@@ -110,7 +109,13 @@
             >
 
         </ListView>
-
+        <View
+            android:id="@+id/client_activity_clients_listView_bottom_background_View"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="@drawable/transparent_client_list_view_bottom_background"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
@@ -119,7 +124,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="10dp"
         android:onClick="addNewTrapClick"
         android:gravity="center_horizontal|top"
       >
