KWIKDEMO-5276: Flag notifications IPM - Android app - clients screen - overview section. trap numbers is wrong

--- a/app/src/main/res/layout/content_my_kwik_buttons.xml
+++ b/app/src/main/res/layout/content_my_kwik_buttons.xml
@@ -48,7 +48,7 @@
                 android:layout_weight="1"
                 android:textColor="@color/kwik_me_white"
                 android:textSize="20sp"
-                android:text="Total Traps: (7)"
+                android:text="Total Traps:"
                 android:gravity="center_vertical|end"/>
 
         </LinearLayout>
