--- a/app/src/main/res/layout/activity_all_set_up.xml
+++ b/app/src/main/res/layout/activity_all_set_up.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.AllSetUpActivity"
+    tools:context="me.kwik.appsquare.AllSetUpActivity"
     android:background="@color/kwik_me_screen_background_color">
 
     <TextView
