--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    tools:context="me.kwik.square.BaseActivity">
+    tools:context="me.kwik.appsquare.BaseActivity">
 
 
     <ProgressBar
