--- a/app/src/main/res/layout/activity_button_settings.xml
+++ b/app/src/main/res/layout/activity_button_settings.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="me.kwik.square.ButtonSettingsActivity">
+    tools:context="me.kwik.appsquare.ButtonSettingsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
