--- a/app/src/main/res/layout/activity_client_details.xml
+++ b/app/src/main/res/layout/activity_client_details.xml
@@ -13,7 +13,7 @@
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="me.kwik.square.IpmLoginActivity">
+        tools:context="me.kwik.appsquare.IpmLoginActivity">
 
         <LinearLayout
             android:id="@+id/client_details_activity_client_name_layout"
