--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.DeliveryActivity">
+    tools:context="me.kwik.appsquare.DeliveryActivity">
 
     <ListView
         android:id="@+id/delivery_activity_time_slots_list_view"
