--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="me.kwik.square.LoginActivity"
+        tools:context="me.kwik.appsquare.LoginActivity"
         android:orientation="vertical"
         android:background="@color/kwik_me_screen_background_color">
 
