--- a/app/src/main/res/layout/activity_network_password.xml
+++ b/app/src/main/res/layout/activity_network_password.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.NetworkPasswordActivity">
+    tools:context="me.kwik.appsquare.NetworkPasswordActivity">
 
 
     <TextView
