--- a/app/src/main/res/layout/activity_personal_details.xml
+++ b/app/src/main/res/layout/activity_personal_details.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.PersonalDetailsActivity"
+    tools:context="me.kwik.appsquare.PersonalDetailsActivity"
     android:orientation="vertical">
 
 
