--- a/app/src/main/res/layout/activity_reorder_settings.xml
+++ b/app/src/main/res/layout/activity_reorder_settings.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.kwik.square.ReorderSettingsActivity"
+    tools:context="me.kwik.appsquare.ReorderSettingsActivity"
     android:background="#ececec">
 
     <ImageView
