--- a/app/src/main/res/layout/activity_select_product.xml
+++ b/app/src/main/res/layout/activity_select_product.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.kwik.square.SelectProductActivity"
+    tools:context="me.kwik.appsquare.SelectProductActivity"
     android:background="#ececec">
 
         <ImageView
