--- a/app/src/main/res/layout/activity_sigin.xml
+++ b/app/src/main/res/layout/activity_sigin.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.SignInActivity">
+    tools:context="me.kwik.appsquare.SignInActivity">
 
 </RelativeLayout>
