--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.SplashActivity"
+    tools:context="me.kwik.appsquare.SplashActivity"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/kwik_me_screen_background_color">
