--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.kwik.square.StartActivity"
+    tools:context="me.kwik.appsquare.StartActivity"
     android:orientation="vertical">
 
     <FrameLayout
