--- a/app/src/main/res/layout/activity_trap_details.xml
+++ b/app/src/main/res/layout/activity_trap_details.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.TrapDetailsActivity">
+    tools:context="me.kwik.appsquare.TrapDetailsActivity">
 
     <RelativeLayout
         android:id="@+id/trap_details_activity_RelativeLayout"
