--- a/app/src/main/res/layout/activity_troubleshooting.xml
+++ b/app/src/main/res/layout/activity_troubleshooting.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="@color/munsell"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.TroubleshootingActivity">
+    tools:context="me.kwik.appsquare.TroubleshootingActivity">
 
     <ListView
         android:id="@+id/troubleshooting_activity_questions_ListView"
