--- a/app/src/main/res/layout/activity_update_personal_details.xml
+++ b/app/src/main/res/layout/activity_update_personal_details.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.UpdatePersonalDetailsActivity"
+    tools:context="me.kwik.appsquare.UpdatePersonalDetailsActivity"
     android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
