--- a/app/src/main/res/layout/activity_wi_fi_selection.xml
+++ b/app/src/main/res/layout/activity_wi_fi_selection.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.kwik.square.WiFiSelectionActivity"
+    tools:context="me.kwik.appsquare.WiFiSelectionActivity"
     android:orientation="vertical">
 
     <ImageView
