--- a/app/src/main/res/layout/app_bar_button_settings.xml
+++ b/app/src/main/res/layout/app_bar_button_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.kwik.square.ButtonSettingsActivity">
+    tools:context="me.kwik.appsquare.ButtonSettingsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
