--- a/app/src/main/res/layout/app_bar_one_button.xml
+++ b/app/src/main/res/layout/app_bar_one_button.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="me.kwik.square.OneButtonActivity">
+    tools:context="me.kwik.appsquare.OneButtonActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
