--- a/app/src/main/res/layout/content_button_settings.xml
+++ b/app/src/main/res/layout/content_button_settings.xml
@@ -13,7 +13,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/kwik_me_screen_background_color"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="me.kwik.square.ButtonSettingsActivity"
+    tools:context="me.kwik.appsquare.ButtonSettingsActivity"
     tools:showIn="@layout/activity_button_settings">
 
 
