KWIKDEMO-5446: IPM - Android App - support teach button with serial 0

--- a/app/src/main/res/layout/activity_trap_details.xml
+++ b/app/src/main/res/layout/activity_trap_details.xml
@@ -59,7 +59,8 @@
                     android:background="#FF98C665"
                     android:scaleType="fitCenter"
                     android:src="@drawable/delete"
-                    android:visibility="invisible"/>
+                    android:onClick="deleteButtonClicked"
+                    />
             </LinearLayout>
 
 
