--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,4 +91,17 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="IPMErrorDialogNoConnectivityStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/kwik_me_color_alert_err_no_connectivity_title</item>
+        <item name="android:textColorPrimary">@color/kwik_me_color_alert_err_no_connectivity_body</item>
+        <item name="buttonBarButtonStyle">@style/IPMErrorDialogNoConnectivityButtonStyle</item>
+    </style>
+
+    <style name="IPMErrorDialogNoConnectivityButtonStyle" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/kwik_me_color_alert_err_no_connectivity_button</item>
+    </style>
+
 </resources>
